[package]
name = "fast_emu_gui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = "0.27"
crossbeam = "0.8.4"
once_cell = "1.10"

winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"

[dependencies.libc]
version = "0.2"
